puree-tests/src/test/resources/neg/Usages2Strict.scala
object Usages2Strict {
  fail
//  def o(): Int = 1
//
//  def f(): Int = {
//    o()
//    1
//  }
}
